# todo_aws

./: README.md  database.py  main.py  pyproject.toml
static/: script.js  style.css
templates/: index.html
